# DRL-VO-Nav2-Implementation-in-CoppeliaSim

./: .gitignore  .gitmodules  README.md  simple_robotdescriptor.urdf
src/drl_vo_nav/: requirements.txt
src/drl_vo_nav/nav2py_drl_vo/: README.md  tb3_drl_vo_nav2_params.yaml
src/drl_vo_nav/nav2py_drl_vo/nav2py_drl_vo_controller/: CMakeLists.txt  QUICKSTART.md  README_INTEGRATION.md  TESTING_CHECKLIST.md  nav2py_drl_vo_controller.xml  package.xml  pyproject.toml
src/drl_vo_nav/nav2py_drl_vo/nav2py_drl_vo_controller/config/: drl_nav2_params.yaml  limo_nav.rviz  limo_robot.urdf
src/drl_vo_nav/nav2py_drl_vo/nav2py_drl_vo_controller/include/nav2py_drl_vo_controller/: drl_vo_controller.hpp
src/drl_vo_nav/nav2py_drl_vo/nav2py_drl_vo_controller/launch/: bringup_drl.launch.py  launch_limo_coppelia.py  limo_coppelia_simple.launch.py
src/drl_vo_nav/nav2py_drl_vo/nav2py_drl_vo_controller/nav2py_drl_vo_controller/: setup.py  test_obstacle_integration.py
src/drl_vo_nav/nav2py_drl_vo/nav2py_drl_vo_controller/nav2py_drl_vo_controller/nav2py_drl_vo_controller/: __main__.py  custom_cnn_full.py  debug_frame_check.py  dynamic_obstacle_subscriber.py  fake_perception_node.py  planner.py
src/drl_vo_nav/nav2py_drl_vo/nav2py_drl_vo_controller/src/: drl_vo_controller.cpp
src/drl_vo_nav/nav2py_drl_vo/scenes/: limo_ros2_bridge.lua
